Så kan videoerne også pause

--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
         <article class="flex-container">
             <section class="flex-item" onclick="thoreFunction()">
                 <h2>Thore</h2>
-                <video id="interviewThore" onmouseover="playInterviewThore()" onmouseout="pauseInterviewThore()">
+                <video id="interviewThore" onmouseover="playInterviewThore()" onmouseout="pauseInterviewThore()" onmouse>
                     <source src="video/vaelg-mig-thore-kort.mp4" type="video/mp4">
                 </video>
             </section>
             <section class="flex-item" onclick="franFunction()">
                 <h2>Francisca</h2>
-                <video id="interviewFran" onmouseover="playInterviewFran()" onmouseout="pauseInterviewFran()">
+                <video id="interviewFran" onmouseenter="playInterviewFran()" onmouseout="pauseInterviewFran()">
                     <source src="video/vaelg-mig-francisca-kort.mp4" type="video/mp4">
                 </video>
             </section>
