--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 
 
-<body onload="myFunction()">
+<body onload="thoreFunction()">
 
 
 
@@ -76,9 +76,7 @@
             <h2 id="sigjatext">SIG JA</h2>
             <p id="citatTegn1">"</p>
             <p id="citatTegn2">"</p>
-            <p id="tekstJa">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod
-                tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud
-                exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea</p>
+            <p id="tekstJa"></p>
             <img id="cirkel" src="img/cirkel.png" alt="cirkel">
         </article>
 
@@ -99,7 +97,7 @@
                 </div>
 
                 <div class="middle">
-                    <p id="tekstValgfag">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</p>
+                    <p id="tekstValgfag"></p>
                     <img src="img/broen.png" alt="¨grafisk-element">
                 </div>
 
