Valgbokse og kommentarer i JS

--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
             <source src="video/Eriksminde.mp4" type="video/mp4">
         </video>
 
-        <h3>MØD</h3>
+        <h3>Mød vores elever</h3>
         <article class="flex-container">
             <section class="flex-item" onclick="thoreFunction()">
                 <h2>Thore</h2>
-                <video id="interviewThore" onmouseover="playInterviewThore()" onmouseout="pauseInterviewThore()" onmouse>
+                <video id="interviewThore" onmouseover="playInterviewThore()" onmouseout="pauseInterviewThore()" width="620" height="auto">
                     <source src="video/vaelg-mig-thore-kort.mp4" type="video/mp4">
                 </video>
             </section>
             <section class="flex-item" onclick="franFunction()">
                 <h2>Francisca</h2>
-                <video id="interviewFran" onmouseenter="playInterviewFran()" onmouseout="pauseInterviewFran()">
+                <video id="interviewFran" onmouseenter="playInterviewFran()" onmouseout="pauseInterviewFran()" width="620" height="auto">
                     <source src="video/vaelg-mig-francisca-kort.mp4" type="video/mp4">
                 </video>
             </section>
