--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
                     <source src="video/vaelg-mig-francisca-kort.mp4" type="video/mp4">
                 </video>
             </section>
+            <p id="navneskilt">Thore</p>
         </article>
 
         <img id="stregtop" src="img/Streg_i_toppen.png" alt="streg">
