Position problem fix'et

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <!-- Det unikke indhold på siden
 ............................................................. 
 -->
-    <main id="main" ">
+    <main id="main">
 
         <video id="stemningsvideo">
             <source src="video/Eriksminde.mp4" type="video/mp4">
@@ -75,8 +75,6 @@
 
         <article id="sigja">
             <h2 id="sigjatext">SIG JA</h2>
-            <p id="citatTegn1">"</p>
-            <p id="citatTegn2">"</p>
             <p id="tekstJa"></p>
             <img id="cirkel" src="img/cirkel.png" alt="cirkel">
         </article>
