--- a/index.html
+++ b/index.html
@@ -111,12 +111,12 @@
             </section>
         </article>
 
-        <article>
+        <article id="citater">
             <section id="overrask-overskrift">
             <h2>Overrask dig selv på</h2>
             <h1>Eriksminde Efterskole</h1>
             </section>
-            <section id="citater">
+            <section>
                 <p id="citat-1">"Lorem ipsum dolor sit amet non proident"</p>
                 <p id="citat-2">"Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore"</p>
                 <p id="citat-3">"Ut enim ad minim veniam, quis nostrud exercitation ullamco"</p>
@@ -124,7 +124,6 @@
                 <p id="citat-5">"Velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat"</p>
                 <p id="citat-6">"Cupidatat non proident, sunt in culpa"</p>
                 <p id="citat-7">"Qui officia deserunt mollit anim id est laborum"</p>
-                <p id="citat-8">"Qui officia deserunt mollit anim id est laborum"</p>
             </section>
         </article>
     </main>
