favicon og sig ja font

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <meta name="robots" content="noindex, nofollow">
     <meta name="keywords" content="XXX" />
     <meta name="description" content="XXX" />
-    <link rel="icon" type="">
+
+    <link rel="icon" href="img/fav_icon.png" type="image/favicon" />
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=News+Cycle&display=swap" rel="stylesheet">
     <script src="js/script.js"></script>
+    
 </head>
 
 
