--- a/index.html
+++ b/index.html
@@ -15,13 +15,11 @@
     <meta name="robots" content="noindex, nofollow">
     <meta name="keywords" content="XXX" />
     <meta name="description" content="XXX" />
-
-    <link rel="icon" href="img/fav_icon.png" type="image/favicon" />
+    <link rel="icon" type="">
     <link href="css/reset.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=News+Cycle&display=swap" rel="stylesheet">
     <script src="js/script.js"></script>
-    
 </head>
 
 
@@ -117,13 +115,14 @@
             <h1>Eriksminde Efterskole</h1>
             </section>
             <section>
-                <p id="citat-1">"Lorem ipsum dolor sit amet non proident"</p>
-                <p id="citat-2">"Consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore"</p>
-                <p id="citat-3">"Ut enim ad minim veniam, quis nostrud exercitation ullamco"</p>
-                <p id="citat-4">"Duis aute irure dolor in reprehenderit in voluptate"</p>
-                <p id="citat-5">"Velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat"</p>
-                <p id="citat-6">"Cupidatat non proident, sunt in culpa"</p>
-                <p id="citat-7">"Qui officia deserunt mollit anim id est laborum"</p>
+                <p id="citat-1">"Medbestemmelse på mit efterskoleår"</p>
+                <p id="citat-2">"Demokrati, samtale, fællesskab, medbestemmelse og ligeværd"</p>
+                <p id="citat-3">"Valgfagene gør at jeg kan prøve mange forskellige ting i løbet af mit år"</p>
+                <p id="citat-4">"Man behøver ikke at kunne - man skal bare VILLE"</p>
+                <p id="citat-5">"Vi er til tider i vores egen lille bobbel, men vi er også utrolig verdensorienteret"</p>
+                <p id="citat-6">"Jeg følte mig hjemme fra allerførste besøg"</p>
+                <p id="citat-7">"Skolen er fyldt med muligheder"</p>
+                <p id="citat-8">"Drengene her har et fantastisk sammenhold"</p>
             </section>
         </article>
     </main>
