--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
         <article>
             <section id="cirkler">
                 <img id="stregbund" src="img/streg_i_bunden.png" alt="streg">
+                <p id="valgfagtekst">Valgfag</p>
                 <audio id="myaudio">
                     <source src="audio/elektroniskmusik.mp3" type="audio/mp3">
                 </audio>
