Første final touch

--- a/index.html
+++ b/index.html
@@ -68,15 +68,16 @@
                     <source src="video/vaelg-mig-francisca-kort.mp4" type="video/mp4">
                 </video>
             </section>
-            <p id="navneskilt">Thore</p>
+            <p id="navneskilt">Tores Historie</p>
         </article>
 
         <img id="stregtop" src="img/Streg_i_toppen.png" alt="streg">
+        <img id="stregtopfran" src="img/streg_i_top_fran.png" alt="streg">
 
         <article id="sigja">
             <h2 id="sigjatext">SIG JA</h2>
             <p id="tekstJa"></p>
-            <img id="cirkel" src="img/cirkel.png" alt="cirkel">
+            <img id="cirkel" src="img/cirkel1.png" alt="cirkel">
         </article>
 
         <article>
@@ -92,7 +93,7 @@
             </section>
 
             <section class="container">
-
+<img src="img/figur-foroven.png" alt="grafisk element" id="sortfigurtop">
                 <div class="analog parallax" id="valgfag1">
                 </div>
 
@@ -102,7 +103,7 @@
                 </div>
 
                 <div class="elektroniskMusik parallax" id="valgfag2"></div>
-                </div>
+                <img src="img/figur-forneden.png" alt="grafisk element" id="sortfigurbund">
 
                 <div class="between">
                     <div class="title middle"></div>
