Movements på citater

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <img id="stregtopfran" src="img/streg_i_top_fran.png" alt="streg">
 
         <article id="sigja">
-            <h2 id="sigjatext">SIG JA</h2>
+            <h2 id="sigjatext" onclick="sigja()">SIG JA</h2>
             <p id="tekstJa"></p>
             <img id="cirkel" src="img/cirkel1.png" alt="cirkel">
         </article>
