--- a/index.html
+++ b/index.html
@@ -58,13 +58,15 @@
         <article class="flex-container">
             <section class="flex-item" onclick="thoreFunction()">
                 <h2>Thore</h2>
-                <video id="interviewThore" onmouseover="playInterviewThore()" onmouseout="pauseInterviewThore()" width="620" height="auto">
+                <video id="interviewThore" onmouseover="playInterviewThore()" onmouseout="pauseInterviewThore()"
+                    width="620" height="auto">
                     <source src="video/vaelg-mig-thore-kort.mp4" type="video/mp4">
                 </video>
             </section>
             <section class="flex-item" onclick="franFunction()">
                 <h2>Francisca</h2>
-                <video id="interviewFran" onmouseenter="playInterviewFran()" onmouseout="pauseInterviewFran()" width="620" height="auto">
+                <video id="interviewFran" onmouseenter="playInterviewFran()" onmouseout="pauseInterviewFran()"
+                    width="620" height="auto">
                     <source src="video/vaelg-mig-francisca-kort.mp4" type="video/mp4">
                 </video>
             </section>
@@ -93,7 +95,7 @@
             </section>
 
             <section class="container">
-<img src="img/figur-foroven.png" alt="grafisk element" id="sortfigurtop">
+                <img src="img/figur-foroven.png" alt="grafisk element" id="sortfigurtop">
                 <div class="analog parallax" id="valgfag1">
                 </div>
 
@@ -113,15 +115,16 @@
 
         <article id="citater">
             <section id="overrask-overskrift">
-            <h2>Overrask dig selv på</h2>
-            <h1>Eriksminde Efterskole</h1>
+                <h2>Overrask dig selv på</h2>
+                <h1>Eriksminde Efterskole</h1>
             </section>
             <section>
                 <p id="citat-1">"Medbestemmelse på mit efterskoleår"</p>
                 <p id="citat-2">"Demokrati, samtale, fællesskab, medbestemmelse og ligeværd"</p>
                 <p id="citat-3">"Valgfagene gør at jeg kan prøve mange forskellige ting i løbet af mit år"</p>
                 <p id="citat-4">"Man behøver ikke at kunne - man skal bare VILLE"</p>
-                <p id="citat-5">"Vi er til tider i vores egen lille bobbel, men vi er også utrolig verdensorienteret"</p>
+                <p id="citat-5">"Vi er til tider i vores egen lille bobbel, men vi er også utrolig verdensorienteret"
+                </p>
                 <p id="citat-6">"Jeg følte mig hjemme fra allerførste besøg"</p>
                 <p id="citat-7">"Skolen er fyldt med muligheder"</p>
                 <p id="citat-8">"Drengene her har et fantastisk sammenhold"</p>
